Corrects weird gutter, corrects Data Model wrap, also changes Data Model to model, also updates one help file

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -85,7 +85,6 @@
 .navbar-form {
   position: relative;
   margin-top: 0.25rem;
-  width: 80%;
 }
 
 @include media-breakpoint-up(sm) {
